# AED

1 - Template/: Makefile  app
LAB1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
LAB1/source/: connectivity.c  connectivity.h  labconn.c
LAB3/: p2-pub
LAB4/Part1/: Makefile  main4a.c  word.c  word.h  words
LAB4/Part2/: Entry.c  Entry.h  LinkedList.c  LinkedList.h  Makefile  defs.h  lab04b  lab04b.c
LAB5/A/: Makefile  lab6a
LAB5/B/: Makefile  lab6b
LAB6/: Makefile  app
LAB6/src/: heap.c  heap.h  simproc.c
LAI/: Makefile  bignum.c  bignum.h  p2-pub.c  p3-pub  p3-pub.c
PB1/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake
PB1/source/: PB1.c
PB2/: -o  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
PB2/source/: main.c
PF/: Makefile  tuktuk
PF-F1/: Makefile
PF-F1/src/: arguments.h  puzzle.h  vector.h
PF-F2/: Makefile  gmon.out  script.py  tuktuk
PF-F2/org/: narrow_city16.check  pontas_soltas18.check
PF-F2/res/: A_testeC.cities  C_testeC.cities  C_testeC.walks  aldeia02.walks  aldeia03.walks  aldeia06.walks  aldeia07.walks  aldeia12.walks  aldeia13.walks  cidade11.walks  cidade12.walks  cidade13.walks  cidade14.walks  cidade15.walks  cidade41.walks  cidade42.walks  cidade43.walks  cidade44.walks  cidade45.walks  cidade46.walks  cidade47.walks  cidade48.walks  cidade49.walks  cidade50.walks  cidade51.cities  (+11 more)
PF-REL/: Makefile  arguments.c  arguments.h  file_manager.c  file_manager.h  heap.c  heap.h  main.c  puzzle.c  puzzle.h  solution.c  solution.h  stack.c  utils.h  vector.c  vector.h
(+59 files in other folders)
